--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,63 +21,47 @@ version: 1.0.1+1
 environment:
   sdk: ">=3.2.5 <4.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+
 dependencies:
+  just_audio_cache: ^0.1.1
+  camera: ^0.10.5+9
+  path_provider: ^2.0.2
+  audioplayers: ^6.0.0
+  chewie: ^1.2.2
+  file_picker: ^8.0.0+1
+  microphone: ^0.1.0
+  flutter_sound: ^8.1.4
+  firebase_database: ^10.5.0
   awesome_dialog: ^3.2.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.17.5
   firebase_core: ^2.25.4
-  flutter:
-    sdk: flutter
+  firebase_storage: ^11.7.0
+  video_player: ^2.1.12
+  just_audio: ^0.9.37
   flutter_screenutil: ^5.9.0
   flutter_offline: ^3.0.1
+  flutter_downloader: ^1.6.1
   font_awesome_flutter: ^10.7.0
   gap: ^3.0.1
   google_sign_in: ^6.2.1
   rive: ^0.12.4
+  youtube_player_flutter: ^9.0.0
+  image_picker: ^0.8.4+2
+  permission_handler: ^8.1.6
+  dio: ^4.0.2
+  flutter:
+    sdk: flutter
+
+
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/login_animation.riv
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - assets/enhanced7.wav
